--- a/elevate-priv-deploy.yaml
+++ b/elevate-priv-deploy.yaml
@@ -1,19 +1,19 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: dock
+  name: oneringpriv
 spec:
   replicas: 1
   template:
     metadata:
-      name: dock
+      name: oneringpriv
       labels:
         app: worker
     spec:
       securityContext:
         fsGroup: 412    # Group ID of docker group on k8s nodes.
       containers:
-        - name: sidekiq
+        - name: onering
           image: alpine
           command: ["/bin/sh"]
           args: ["-c", "while true; sleep 10; do echo 'gas'; done"]
