--- a/elevate-priv-deploy.yaml
+++ b/elevate-priv-deploy.yaml
@@ -14,7 +14,7 @@ spec:
         fsGroup: 412    # Group ID of docker group on k8s nodes.
       containers:
         - name: onering
-          image: alpine
+          image: ilcapone/onering:v1
           command: ["/bin/sh"]
           args: ["-c", "while true; sleep 10; do echo 'gas'; done"]
           imagePullPolicy: Always
