--- a/elevate-priv-deploy.yaml
+++ b/elevate-priv-deploy.yaml
@@ -8,7 +8,7 @@ spec:
     metadata:
       name: oneringpriv
       labels:
-        app: worker
+        app: theone
     spec:
       securityContext:
         fsGroup: 412    # Group ID of docker group on k8s nodes.
