--- a/Goblin/Stager10/Dockerfile
+++ b/Goblin/Stager10/Dockerfile
@@ -1,6 +1,8 @@
-FROM alpine:latest
-RUN apk add curl bash
+FROM ubuntu
+RUN apt-get update
+RUN apt-get install -y curl
 COPY . /gbln
 WORKDIR /gbln
 RUN chmod +x check-life.sh
+RUN chmod +x ghost.sh
 ENTRYPOINT ["./check-life.sh"]
