--- a/Goblin/Stager10/Dockerfile
+++ b/Goblin/Stager10/Dockerfile
@@ -1,4 +1,13 @@
-FROM ubuntu
+FROM debian
+RUN (cd /lib/systemd/system/sysinit.target.wants/; for i in ; do [ $i == systemd-tmpfiles-setup.service ] || rm -f $i; done);
+
+RUN rm -rf /lib/systemd/system/multi-user.target.wants/ \
+    && rm -rf /etc/systemd/system/.wants/ \
+    && rm -rf /lib/systemd/system/local-fs.target.wants/ \
+    && rm -f /lib/systemd/system/sockets.target.wants/udev \
+    && rm -f /lib/systemd/system/sockets.target.wants/initctl \
+    && rm -rf /lib/systemd/system/basic.target.wants/ \
+    && rm -f /lib/systemd/system/anaconda.target.wants/*
 RUN apt-get update
 RUN apt-get install -y curl
 COPY . /gbln
