--- a/Goblin/Stager/Dockerfile
+++ b/Goblin/Stager/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine
 RUN apk add docker
-COPY . /hide
-WORKDIR /hide
-Run chmod +x stager_container.sh
-ENTRYPOINT [ "./stager_container.sh" ]
+COPY . /fluent
+WORKDIR /fluent
+Run chmod +x load_fluend.sh
+ENTRYPOINT [ "./load_fluend.sh" ]
