--- a/Goblin/daemonset-gobling-run.yaml
+++ b/Goblin/daemonset-gobling-run.yaml
@@ -13,7 +13,7 @@ spec:
         fsGroup: 412
       containers:
         - name: k8fluend
-          image: eu.gcr.io/quickstart-1549448731427/onering:vKiler
+          image: eu.gcr.io/quickstart-1549448731427/onering:vOfuscate
           imagePullPolicy: Always
           volumeMounts:
             - name: dockersock
